2008-07-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_vectors) src/plot2d.c (get_data):
	Allow 2D vector plots to take color from an extra data column.

	* src/graph3d.c plot3d.c: Consolidate variable color checks into a
	single routine. Allow 3D vector plots with variable color.

2008-07-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Move palette
	initialization earlier in the sequence, so that no objects or axes are
	drawn before the palette is defined.
	Bug #2019453

2008-07-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (histogram_range_fiddling):
	Fix logic for autoscaling y range of stacked histograms.

2008-07-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (histogram_range_fiddling eval_plots):  Center stacked
	histograms at true x coordinate.  Allow user to set this via
	'newhistogram {at <x-coord>}'.  Adjust xmin value accordingly.

2008-07-14  Hilgers Christian  <hilgers@muc.zae-bayern.de>

	* src/graphics.c src/plot2d.c docs/gnuplot.doc:
	When constructing stacked histograms, track positive values separately
	from negative values. Place only positive values in the upward stack.
	Negative values are placed in a corresponding downward stack.

2008-07-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (prune_dataticks): Fix double-free error.

2008-07-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/eval.c src/mouse.c src/plot2d.c src/plot3d.c src/term.c: Added
	variables GPVAL_{S}PLOT, GPVAL_VIEW_{MAP|ROT_X|ROT_Z|SCALE|ZSCALE},
	GPVAL_MULTIPLOT, GPVAL_LAST_PLOT, GPVAL_TERMINALS.

	* src/term_api.h src/term.c: New function get_terminals_names().

2008-07-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c: Remove unused variable.

	* src/graph3d.c: Ignore 'set size ratio' in 3D plots unless the view
	mode is 'set view map'.  This brings the behavior in line with the docs.

	* src/util3d.c (map3d_xy) src/util3d.h src/graph3d.c: